--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "local-storage": "^2.0.0",
     "next": "12.1.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "sass": "^1.51.0"
+    "sass": "^1.51.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "8.14.0",
