--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "local-storage": "^2.0.0",
     "next": "12.1.5",
     "react": "18.1.0",
