--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "12.1.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-lazyload": "^3.2.0",
     "sass": "^1.51.0",
     "uuid": "^8.3.2"
   },
